--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -26,4 +26,4 @@ jobs:
       shell: bash
       
     - name: Build and test
-      run: xcodebuild clean build test -workspace POC_GithuAction.xcworkspace -scheme "POC_GithuAction" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace {{inputs.targetName}} -scheme "POC_GithuAction" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
