--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -32,4 +32,4 @@ jobs:
 #      shell: bash
 
     - name: Build and test
-      run: xcodebuild clean build test -workspace ${{inputs.workspaceName}} -scheme '"'${{ inputs.targetName }}'"' -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
