--- a/.github/workflows/iOSBasicSharedActionLint.yml
+++ b/.github/workflows/iOSBasicSharedActionLint.yml
@@ -18,7 +18,6 @@ jobs:
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
     - name: Lint Script
-        run: |
-          set -o pipefail
-          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
+        run: swiftlint
+        shell: base
       
