--- a/.github/workflows/iOSBasicSharedActionLint.yml
+++ b/.github/workflows/iOSBasicSharedActionLint.yml
@@ -17,7 +17,7 @@ jobs:
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
-    - name: Lint Script
-        run: swiftlint
-        shell: base
+#    - name: Lint Script
+#        run: swiftlint
+#        shell: base
       
