--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
 
-    - name: Install Pods
-        run: pod install
-        shell: bash
+    - name: Install Dependencies
+      run: pod install
+      shell: bash
+
