Added Pod cache and Linting

--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -26,6 +26,12 @@ jobs:
       
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
+      
+    - uses: actions/cache@v2
+        with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: | ${{ runner.os }}-pods-
 
     - name: Install Dependencies
       run: pod install
