--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -26,14 +26,13 @@ jobs:
       
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
-      
-    - uses: actions/cache@v2
-        with:
-        path: Pods
-        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-        restore-keys: | ${{ runner.os }}-pods-
 
     - name: Install Dependencies
       run: pod install
       shell: bash
-
+      
+    - name: Clean and Build
+        uses: mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
+        with:
+            targetName: POC_GithuAction
+            workspaceName: POC_GithuAction.xcworkspace
