Build and clean

--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -27,12 +27,19 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
 
-    - name: Install Dependencies
+    - name: Install Pods
       run: pod install
       shell: bash
-      
+
     - name: Clean and Build
         uses: mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
-        with:
+            with:
+                targetName: POC_GithuAction
+                workspaceName: POC_GithuAction.xcworkspace
+
+    - name: Test
+        uses: mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionTesting.yml@main
+            with:
             targetName: POC_GithuAction
             workspaceName: POC_GithuAction.xcworkspace
+      
