--- a/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
+++ b/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
@@ -11,7 +11,9 @@ on:
         type: string
 jobs:
   build-and-test:
+    runs-on: macos-latest
     steps:
+    - uses: actions/checkout@v2
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
