--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -32,13 +32,13 @@ jobs:
       shell: bash
 
     - name: Clean and Build
-        uses: mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
+        uses: iOSBasicSharedActionCleanAndBuild.yml
             with:
                 targetName: POC_GithuAction
                 workspaceName: POC_GithuAction.xcworkspace
 
     - name: Test
-        uses: mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionTesting.yml@main
+        uses: iOSBasicSharedActionTesting.yml
             with:
             targetName: POC_GithuAction
             workspaceName: POC_GithuAction.xcworkspace
