Build and clean

--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -32,14 +32,8 @@ jobs:
       shell: bash
 
     - name: Clean and Build
-        uses: ./.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
+        uses:  mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
             with:
                 targetName: POC_GithuAction
                 workspaceName: POC_GithuAction.xcworkspace
-
-    - name: Test
-        uses: ./.github/workflows/iOSBasicSharedActionTesting.yml
-            with:
-            targetName: POC_GithuAction
-            workspaceName: POC_GithuAction.xcworkspace
       
