--- a/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
+++ b/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
@@ -11,10 +11,9 @@ on:
         type: string
 jobs:
   build-and-test:
+      runs-on: macos-latest
     steps:
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
-    - name: Clean and Build
-        run: xcodebuild clean build -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       
