--- a/.github/workflows/iOSBuildSharedAction.yml
+++ b/.github/workflows/iOSBuildSharedAction.yml
@@ -27,6 +27,13 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
 
+    - name: Check cached PODS
+      uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: | ${{ runner.os }}-pods-
+
     - name: Install Pods
       run: pod install
       shell: bash
