--- a/.github/workflows/iOSBuildSharedAction.yml
+++ b/.github/workflows/iOSBuildSharedAction.yml
@@ -37,6 +37,11 @@ jobs:
 
     - name: Install Pods
       run: pod install
+    
+    - name: Lint
+      run: |
+          set -o pipefail
+          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
 
     - name: Clean and Build
       run: xcodebuild clean build test -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
