--- a/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
+++ b/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
@@ -13,6 +13,7 @@ jobs:
   build-and-test:
       runs-on: macos-latest
     steps:
+    - uses: actions/checkout@v2
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
