--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -31,14 +31,22 @@ jobs:
       run: pod install
       shell: bash
       
-    - name: Lint
+    - name: Pod Integrity Stage
+      id: pod_status
       run: |
-          set -o pipefail
-          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
+           mkdir -p ./build/
+           ./DevOps/ci/script/check-pods-integrity.swift LillyDevice > pod_integrity.txt
+           echo "::set-output name=pod_status::success"
+      
+#    - name: Lint
+#      run: |
+#          set -o pipefail
+#          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
 
-    - name: Clean and Build
-        uses:  mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
-            with:
-                targetName: POC_GithuAction
-                workspaceName: POC_GithuAction.xcworkspace
+#    - name: Clean and Build
+#        uses:  mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
+#            with:
+#                targetName: POC_GithuAction
+#                workspaceName: POC_GithuAction.xcworkspace
+
       
