--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -34,6 +34,7 @@ jobs:
       shell: bash
       
     - name: Pod Integrity Stage
+      - uses: actions/checkout@v3
       id: pod_status
       run: |
            mkdir -p ./build/
