--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -37,8 +37,10 @@ jobs:
       - uses: actions/checkout@v3
       id: pod_status
       run: |
+           pwd
+           ls
            mkdir -p ./build/
-           ./../DevOps/ci/script/check-pods-integrity.swift ${{ inputs.targetName }} > pod_integrity.txt
+           ./DevOps/ci/script/check-pods-integrity.swift ${{ inputs.targetName }} > pod_integrity.txt
            echo "::set-output name=pod_status::success"
       
 #    - name: Lint
