--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
 #    - uses: actions/checkout@v2
     - uses: actions/checkout@v3
+        with:
+        path: main
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
