--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -15,19 +15,17 @@ jobs:
     steps:
 #    - uses: actions/checkout@v2
     - uses: actions/checkout@v3
-        with:
-        path: main
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
         pwd
         ls
         
-    - name: Checkout tools repo
+    - name: Checkout shared actions repo
         uses: actions/checkout@v3
         with:
             repository: mohanraajsk/POC_Shared_Actions
-            path: sharedrepo
+            path: POC_Shared_Actions
       
 #    - name: List of simulator
 #      run: xcrun simctl list
