--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -13,17 +13,17 @@ jobs:
   build-and-test:
     runs-on: macos-latest
     steps:
-     uses: actions/checkout@v2
+     uses: actions/checkout@v3
 #    - uses: actions/checkout@v3
-    - run: |
-        echo "Env: \"${{ inputs.targetName }}\""
-        echo "Env: ${{ inputs.workspaceName }}"
-        pwd
-        ls
+#    - run: |
+#        echo "Env: \"${{ inputs.targetName }}\""
+#        echo "Env: ${{ inputs.workspaceName }}"
+#        pwd
+#        ls
         
     - name: Checkout shared actions repo
-    uses: actions/checkout@v3
-    with:
+      uses: actions/checkout@v3
+      with:
         repository: mohanraajsk/POC_Shared_Actions
         path: POC_Shared_Actions
       
