--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -13,25 +13,13 @@ jobs:
   build-and-test:
     runs-on: macos-latest
     steps:
-     uses: actions/checkout@v3
-#    - uses: actions/checkout@v3
-#    - run: |
-#        echo "Env: \"${{ inputs.targetName }}\""
-#        echo "Env: ${{ inputs.workspaceName }}"
-#        pwd
-#        ls
-        
+    - name: Checkout Project repo
+      uses: actions/checkout@v3
     - name: Checkout shared actions repo
       uses: actions/checkout@v3
       with:
         repository: mohanraajsk/POC_Shared_Actions
         path: POC_Shared_Actions
-      
-#    - name: List of simulator
-#      run: xcrun simctl list
-#
-#    - name: Open simulator
-#      run: open -a Simulator --args -CurrentDevice UDID E7358E62-ECF9-436A-834F-CFB7C2801FD9
       
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
@@ -48,16 +36,5 @@ jobs:
            mkdir -p ./build/
                    ./sharedrepo/DevOps/ci/script/check-pods-integrity.swift ${{ inputs.targetName }} > pod_integrity.txt
            echo "::set-output name=pod_status::success"
-      
-#    - name: Lint
-#      run: |
-#          set -o pipefail
-#          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
-
-#    - name: Clean and Build
-#        uses:  mohanraajsk/POC_Shared_Actions/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml@main
-#            with:
-#                targetName: POC_GithuAction
-#                workspaceName: POC_GithuAction.xcworkspace
 
       
