--- a/.github/workflows/iOSBasicSharedAction.yml
+++ b/.github/workflows/iOSBasicSharedAction.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: mohanraajsk/POC_Shared_Actions
-        path: POC_Shared_Actions
+        path: sharedrepo
       
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
