--- a/.github/workflows/iOSBasicSharedActionLint.yml
+++ b/.github/workflows/iOSBasicSharedActionLint.yml
@@ -23,39 +23,39 @@ jobs:
       with:
         repository: mohanraajsk/POC_Shared_Actions
         path: sharedrepo
-     
-    - name: Create directory and create file in homedir
+      
+    - name: List of simulator
+      run: xcrun simctl list
+
+    - name: Open simulator
+      run: open -a Simulator --args -CurrentDevice UDID E7358E62-ECF9-436A-834F-CFB7C2801FD9
+
+    - name: Select Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app
+
+    - name: Check cached PODS
+      uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: |
+                    ${{ runner.os }}-pods-
+
+    - name: Install Pods
+      run: pod install
+      shell: bash
+
+    - name: Lint
+      run: |
+          set -o pipefail
+          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
+    
+    - name: Lint result to output file
       run: |
         ls -la ~/
         mkdir ~/results
         echo Lint result will be here        > ~/results/lintresult.txt
         cat ~/results/lintresult.txt
-      
-#    - name: List of simulator
-#      run: xcrun simctl list
-#
-#    - name: Open simulator
-#      run: open -a Simulator --args -CurrentDevice UDID E7358E62-ECF9-436A-834F-CFB7C2801FD9
-#
-#    - name: Select Xcode
-#      run: sudo xcode-select -switch /Applications/Xcode.app
-#
-#    - name: Check cached PODS
-#      uses: actions/cache@v2
-#      with:
-#        path: Pods
-#        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-#        restore-keys: |
-#                    ${{ runner.os }}-pods-
-#
-#    - name: Install Pods
-#      run: pod install
-#      shell: bash
-#
-#    - name: Lint
-#      run: |
-#          set -o pipefail
-#          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
 
 
       
