--- a/.github/workflows/iOSBasicSharedActionLint.yml
+++ b/.github/workflows/iOSBasicSharedActionLint.yml
@@ -44,18 +44,18 @@ jobs:
     - name: Install Pods
       run: pod install
       shell: bash
+      
+    - name: Summary results directory creation
+      run: |
+        ls -la ~/
+        mkdir ~/results
 
     - name: Lint
       run: |
           set -o pipefail
-          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/'
+          swiftlint lint --strict --quiet | sed -E 's/^(.*):([0-9]+):([0-9]+): (warning|error|[^:]+): (.*)/::\4 title=Lint error,file=\1,line=\2,col=\3::\5\n\1:\2:\3/' > results/lint_output.txt
     
-    - name: Lint result to output file
-      run: |
-        ls -la ~/
-        mkdir ~/results
-        echo Lint result will be here        > ~/results/lintresult.txt
-        cat ~/results/lintresult.txt
+    
 
 
       
