Lint result into output

--- a/.github/workflows/iOSBasicSharedActionLint.yml
+++ b/.github/workflows/iOSBasicSharedActionLint.yml
@@ -47,8 +47,7 @@ jobs:
       
     - name: Summary results directory creation
       run: |
-        ls -la ~/
-        mkdir ~/results
+        mkdir results
 
     - name: Lint
       run: |
