--- a/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
+++ b/.github/workflows/iOSBasicSharedActionCleanAndBuild.yml
@@ -17,6 +17,19 @@ jobs:
     - run: |
         echo "Env: \"${{ inputs.targetName }}\""
         echo "Env: ${{ inputs.workspaceName }}"
+        
+    - name: Check cached PODS
+      uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: |
+                    ${{ runner.os }}-pods-
+
+    - name: Install Pods
+      run: pod install
+      shell: bash
+      
     - name: Clean and Build
       run: xcodebuild clean build -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       
