--- a/.github/workflows/iOSBuildSharedAction.yml
+++ b/.github/workflows/iOSBuildSharedAction.yml
@@ -52,10 +52,17 @@ jobs:
           cat results/lint_output.txt
 
     - name: Clean and Build
-      run: xcodebuild clean build test -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       
     - name: Test
-      run: xcodebuild test -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" -enableCodeCoverage YES ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild test -workspace ${{inputs.workspaceName}} -scheme "${{ inputs.targetName }}" -sdk iphonesimulator  -derivedDataPath Build/ -destination "platform=iOS Simulator,name=iPhone 11" -enableCodeCoverage YES ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      
+    - name: Test result with coverage
+      run: xcrun xccov view --report Build/Logs/Test/*.xcresult --json
+      
+      
+      
+      
 
       
 
